--- a/FE/flower_store/public/index.html
+++ b/FE/flower_store/public/index.html
@@ -32,6 +32,11 @@
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
           crossorigin="anonymous">
     <title>Daisy</title>
+
+    <!--    Paypal-->
+    <script src="https://www.paypal.com/sdk/js?client-id=ATWDIXHB5X46uahxQBRIOnlaL3E_FyQbaLiVmG7gymvn5sjSPu3NuOkG9k1klQ40mHGYiRxpVzBElboi">
+
+    </script>
 </head>
 <body>
 
