--- a/FE/flower_store/public/index.html
+++ b/FE/flower_store/public/index.html
@@ -34,7 +34,7 @@
     <title>Daisy</title>
 
     <!--    Paypal-->
-    <script src="https://www.paypal.com/sdk/js?client-id=AaN1o_ZQlCJCtYoL91VtXvwvaucdi7Le_sW2-fj4-PNXsJLyl-HSyAQq5qExbpqyjKrUe5XY0IC3b1oM">
+    <script src="https://www.paypal.com/sdk/js?client-id=AZq6KHnWdZdcGP-1sJS9IVxzx2BMY5BgksL2jGgbaO5ycRC7X0NAMjlIZyRk-KYkySJfQEYqdo66lOdw&currency=USD">
     </script>
 
 </head>
